# ddfd

./: .gitignore  CMakeLists.txt  crop_faces.cpp  ddfd_train.cpp  fhog_extract_faces.cpp  imagenet_finetune.cpp  resnet34_train.cpp
